After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 647434 - Timeout not delaying rendering
Timeout not delaying rendering
Status: RESOLVED FIXED
Product: gnome-web-photo
Classification: Other
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: gnome-web-photo-maint
gnome-web-photo-maint
Depends on:
Blocks:
 
 
Reported: 2011-04-11 10:06 UTC by Manuel Rego Casasnovas
Modified: 2011-07-25 07:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Example page showing a "Loading..." red box for 3 seconds (3.71 KB, text/html)
2011-04-11 10:06 UTC, Manuel Rego Casasnovas
Details

Description Manuel Rego Casasnovas 2011-04-11 10:06:13 UTC
Created attachment 185688 [details]
Example page showing a "Loading..." red box for 3 seconds

I'm testing gnome-web-photo compiled with gtk-2.0, and I'm not able to delay rendering in order to be able to avoid "Loading..." message in a page like the attached one.

Command line:
gnome-web-photo -m photo -t 5 file:///tmp/test-delay.html test.png

Red box with "Loading..." appears in test.png, and it's supposed to wait 5s, so the message shouldn't appear.
Comment 1 Vincent Untz 2011-04-11 10:16:01 UTC
The timeout won't help: it's just a way to force rendering even if the page isn't fully loaded after the timeout.

My guess is that we receive the "load finished" event before the javascript is executed. I'm not really sure there's anything we can do about that.
Comment 2 Manuel Rego Casasnovas 2011-04-11 10:27:35 UTC
Ok, then I don't understand timeout parameter properly.

My idea would be add a new parameter in order to delay the moment to take the photo. Once the web is rendered wait X seconds in order to generate the picture.

I've done something similar with a parameter called "delay" in a test project: http://gitorious.org/wk2img

This is really useful for pages with a lot of JavaScript that usually need sometime to be rendered.
Comment 3 Vincent Untz 2011-04-11 10:37:11 UTC
We can add a --delay or --wait argument :-) That's rather trivial to do.
Comment 4 Manuel Rego Casasnovas 2011-04-11 10:45:38 UTC
This would be really nice, at least for my case ;-)
Comment 5 Vincent Untz 2011-07-25 07:20:18 UTC
I had a few free minutes, so I committed a --delay option. I'll do a new tarball soonish.