Add --delay option, to specify wait time between rendering and capturing

Default is 0.
Also clarify --timeout help text.

https://bugzilla.gnome.org/show_bug.cgi?id=647434